[wheel]
universal = 1


[metadata]
requires-dist =
        PyYAML>=3.10,<5.3
        requests>=2.22.0


[check-manifest]
ignore =
    .github
    .github/*
    .dependabot
    .dependabot/*
    .coveragerc
    CHANGELOG.rst
    CONTRIBUTING.rst
    .travis.yml
    requirements*
    tox.ini
    .changes
    .changes/*
    tests
    tests/*
    scripts
    scripts/*
    doc
    doc/*
    __pycache__
    __pycache__/*
    DeepSecurity/__pycache__
    DeepSecurity/__pycache__/*
    SmartCheck/__pycache__
    SmartCheck/__pycache__/*
